Add Order class in Order.h and order.csv & execution_rep.csv files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(FlowerExchange)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(FlowerExchange main.cpp)
+add_executable(FlowerExchange main.cpp Order.h)
